--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -16,7 +16,7 @@
     .imgContainer {
       width: 700px;
       height: 700px;
-      background-color: crimson;
+      background-color: rgb(17, 147, 207);
       background-repeat: no-repeat;
       background-size: cover;
       border-radius: 50%;
